--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,13 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto',sans-serif;
+    font-family: 'Roboto', sans-serif;
     list-style: none;
     text-decoration: none;
 }
-header{
+
+header {
     position: fixed;
     top: 0;
     right: 0;
@@ -17,28 +18,34 @@ header{
     justify-content: space-between;
     padding: 20px 10%;
 }
-.logo img{
+
+.logo img {
     width: 140px;
     height: auto;
 }
-.navmenu{
+
+.navmenu {
     display: flex;
 }
-.navmenu a{
+
+.navmenu a {
     padding: 10px 20px;
     color: #292929;
     text-transform: capitalize;
     font-weight: 500;
     transition: all 0.42s ease;
 }
-.navmenu a:hover{
+
+.navmenu a:hover {
     color: #CC3333;
 }
-.nav-icon{
+
+.nav-icon {
     display: flex;
     align-items: center;
 }
-.nav-icon .btn{
+
+.nav-icon .btn {
     display: inline-block;
     text-transform: capitalize;
     font-size: 16px;
@@ -51,10 +58,12 @@ header{
     margin-right: 15px;
     transition: all 0.42s ease;
 }
-.nav-icon .btn:hover{
+
+.nav-icon .btn:hover {
     transform: scale(1.1);
 }
-#menu-icon{
+
+#menu-icon {
     font-size: 35px;
     color: #292929;
     cursor: pointer;
@@ -62,10 +71,11 @@ header{
     display: none;
 }
 
-section{
+section {
     padding: 60px 12%;
 }
-.home{
+
+.home {
     width: 100%;
     height: 100vh;
     background-image: url(./img/banner-bg.jpg);
@@ -76,42 +86,49 @@ section{
     align-items: center;
     gap: 2rem;
 }
-.home-img img{
+
+.home-img img {
     max-width: 100%;
     width: 100%;
     height: auto;
 }
-.home-text h4{
+
+.home-text h4 {
     color: #CC3333;
     font-size: 20px;
     font-weight: 600;
     letter-spacing: -1px;
-    font-family: "Lobstar",cursive;
+    font-family: "Lobstar", cursive;
 }
-.home-text h1{
+
+.home-text h1 {
     font-size: 45px;
     color: #292929;
     font-weight: 700;
     line-height: 1.2;
     margin: 23px 0;
 }
-.home-text span{
+
+.home-text span {
     color: #CC3333;
     text-decoration: underline;
 }
-.home-text p{
+
+.home-text p {
     color: #666;
     font-size: 15px;
     line-height: 25px;
     font-weight: 400;
     margin-bottom: 40px;
 }
-.main-btn{
+
+.main-btn {
     display: inline-flex;
     align-items: center;
     justify-content: space-between;
 }
-.main-btn .btn1{
+
+.main-btn .btn1 {
     display: inline-block;
     color: #fff;
     font-size: 15px;
@@ -120,10 +137,12 @@ section{
     padding: 12px 30px;
     transition: all 0.42s ease;
 }
-.main-btn .btn1:hover{
+
+.main-btn .btn1:hover {
     background-color: #292929;
 }
-.btn2{
+
+.btn2 {
     font-size: 15px;
     font-weight: 500;
     color: #292929;
@@ -132,7 +151,8 @@ section{
     justify-content: center;
     margin-left: 30px;
 }
-.btn2 span i{
+
+.btn2 span i {
     width: 50px;
     height: 50px;
     background-color: #CC3333;
@@ -145,46 +165,80 @@ section{
     margin-right: 15px;
     transition: all 0.42s ease;
 }
-.btn2 span i:hover{
+
+.btn2 span i:hover {
     transform: translateY(-5px);
 }
 
-@media(max-width: 945px){
-    header{
+.social_icon {
+    margin-top: 30px;
+
+}
+
+.social_icon i {
+    font-size: 35px;
+    padding-right: 10px;
+    color: gray;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.social_icon i:nth-child(1):hover {
+    color: blue;
+}
+
+.social_icon i:nth-child(2):hover {
+    color: red;
+}
+
+.social_icon i:nth-child(3):hover {
+    color: orange;
+}
+
+@media(max-width: 945px) {
+    header {
         padding: 20px 3%;
         transition: 0.3s;
     }
 }
-@media(max-width: 1040px){
-    .home{
+
+@media(max-width: 1040px) {
+    .home {
         grid-template-columns: 1fr;
         height: 100%;
     }
-    header.sticky{
+
+    header.sticky {
         background: #fff;
         padding: 10px 3%;
         box-shadow: 0 0 10px rgb(0 0 0 /100%);
     }
-    .home-text{
+
+    .home-text {
         padding-top: 50px;
         text-align: center;
     }
-    section{
+
+    section {
         padding: 90px 3%;
     }
-    .home-img img{
+
+    .home-img img {
         width: 100%;
         max-width: 600px;
     }
-    .home-img{
+
+    .home-img {
         text-align: center;
     }
 }
-@media(max-width: 845px){
-    #menu-icon{
+
+@media(max-width: 845px) {
+    #menu-icon {
         display: block;
-    }    
-    .navmenu{
+    }
+
+    .navmenu {
         position: absolute;
         top: 100%;
         right: -100%;
@@ -197,16 +251,19 @@ section{
         padding: 90px 30px;
         transition: all 0.42s ease;
     }
-    .navmenu a{
+
+    .navmenu a {
         display: block;
         margin: 5px 5px;
         transition: all 0.42s ease;
     }
-    .navmenu a:hover{
+
+    .navmenu a:hover {
         color: #fff;
         transform: translateX(-5px);
     }
-    .navmenu.open{
+
+    .navmenu.open {
         right: 0;
     }
 }
